# transponder

./: README.md
arduino/: README.md  compile_and_upload.sh
arduino/ESP32_PoE_Ethernet_Arduino/: ESP32_PoE_Ethernet_Arduino.ino  iac_udp_struct.h
arduino/transponder/: iac_udp_struct.h  transponder.ino  xbee_struct.h
hardware/: README.md
hardware/cad/: 2.4GHz_antenna_long.SLDPRT  M3x6.SLDPRT  esp32-poe-iso_mount.SLDPRT  esp32-poe-iso_mount.STL  transponder_assembly.SLDASM  xbee3.SLDPRT  xbee_explorer_adaptor.SLDPRT
ros/: README.md
ros/transponder2ros/: CMakeLists.txt  package.xml
ros/transponder2ros/include/transponder2ros/: iac_udp_struct.h  transponder2ros.hpp
ros/transponder2ros/launch/: transponder.launch.py
ros/transponder2ros/src/: debug_node.cpp  functions_ros.cpp  functions_udp.cpp  odom2transponder_node.cpp  transponder2NavSatFix_node.cpp  transponder2ros.cpp  transponder2ros_node.cpp
ros/transponder2ros/src/transponder2ros/: functions_ros.cpp  functions_serial.cpp  functions_udp.cpp  transponder2ros.cpp
ros/transponder_msgs/: CMakeLists.txt  package.xml
ros/transponder_msgs/msg/: Transponder.msg
transponder2ros/: CMakeLists.txt  package.xml
transponder2ros/include/transponder2ros/: iac_udp_struct.h  transponder2ros.hpp
transponder2ros/launch/: transponder.launch.py
transponder2ros/src/: functions_ros.cpp  functions_udp.cpp  transponder2ros.cpp
xbee/: README.md  iac_default.xpro
